--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
@@ -18,6 +18,11 @@
                             <hr class="lineaGradian"/>
                         </p:tab>
 
+                        <!--p:tab id="relacion" title="Información de relación">
+                            <ui:include src="componente/cpt-formulario-relacion.xhtml"/>
+                            <hr class="lineaGradian"/>
+                        </p:tab-->
+
                         <p:tab id="relacion" title="Información de contacto">
                             <ui:include src="componente/cpt-formulario-contacto.xhtml"/>
                             <hr class="lineaGradian"/>
