--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-contacto.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-contacto.xhtml
@@ -10,18 +10,25 @@
 
         <h:panelGrid columns="3" columnClasses="label, value" >
 
-            <h:outputText value="Nombre de contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNombreContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto}" onblur="value = value.toUpperCase()" 
-                         styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Nombre es requerido."  label ="Nombre de contacto" maxlength="99"/>
+            <p:outputLabel for="txtNombreContacto" value="Nombre de contacto:" styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtNombreContacto" label ="Nombre de contacto" required="true" maxlength="99"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto}" styleClass="valorEtiquetaFormulario" 
+                         onblur="value = value.toUpperCase().trim()" requiredMessage="El nombre de contacto es requerido."/>
             <p:message for="txtNombreContacto"/>
 
-            <h:outputText value="Cargo de contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtCargoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto}" onblur="value = value.toUpperCase()" 
-                         styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Cargo es requerido." label ="Cargo de contacto" maxlength="80"/>
+            <p:outputLabel for="txtCargoContacto" value="Cargo de contacto:" styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtCargoContacto" required="true" label ="Cargo de contacto" maxlength="80"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto}" styleClass="valorEtiquetaFormulario"
+                         onblur="value = value.toUpperCase().trim()" requiredMessage="El cargo del contacto es requerido."/>
             <p:message for="txtCargoContacto"/>
 
-            <h:outputText value="Teléfono contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtTelefonoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Teléfono es requerido." label ="Teléfono contacto" maxlength="199"/>
+            <p:outputLabel for="txtTelefonoContacto" value="Teléfono contacto:" styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtTelefonoContacto" required="true" label ="Teléfono contacto" maxlength="199"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto}" 
+                         styleClass="valorEtiquetaFormulario"  requiredMessage="El teléfono del contacto es requerido."
+                         validatorMessage="Formato de telefono incorrecto, Ejemplo: (094)777785">
+                <f:validateRegex pattern="^[0-9,-;()]+$" />
+            </p:inputText>
             <h:panelGrid columns="2" cellpadding="0">
                 <p:message for="txtTelefonoContacto"/>
                 <p:graphicImage id="imgAyudaTelefonoContacto1" value="/resources/icon/icono-de-ayuda.png" />
@@ -29,73 +36,89 @@
                     <p>Puede adicionar información como el indicativo o extención <br></br>
                         y adicionar más de un número telefonico separado por (;)</p>
                     <p>Formato: (indicativo)telefono,extención-extención;<br></br>
-                       Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
+                        Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
                 </p:tooltip>
             </h:panelGrid>
 
-            <h:outputText value="Correo electrónico de contacto: *" styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtCorreoContacto" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Correo es requerido." label ="Correo electrónico de contacto" validatorMessage="Correo electrónico de contacto incorrecto" maxlength="79">
+            <p:outputLabel for="txtCorreoContacto" value="Correo electrónico de contacto:" styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtCorreoContacto" required="true" label ="Correo electrónico de contacto" maxlength="79"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto}" styleClass="valorEtiquetaFormulario"  
+                         requiredMessage="El correo electrónico del contacto es requerido."  validatorMessage="Correo electrónico de contacto incorrecto" >
                 <f:validateRegex pattern="^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$" />
             </p:inputText>
             <p:message for="txtCorreoContacto"/>
 
-            <h:outputText value="Nombre de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto2}" onblur="value = value.toUpperCase()" 
-                         styleClass="valorEtiquetaFormulario" label ="Nombre de contacto 2" maxlength="99"/>
+            <p:outputLabel value="Nombre de contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText label ="Nombre de contacto 2" maxlength="99" styleClass="valorEtiquetaFormulario"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto2}" 
+                         onblur="value = value.toUpperCase().trim()"/>
             <p:spacer/>
 
-            <h:outputText value="Cargo de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto2}" onblur="value = value.toUpperCase()" 
-                         styleClass="valorEtiquetaFormulario" label ="Cargo de contacto 2" maxlength="79"/>
+            <p:outputLabel value="Cargo de contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText label ="Cargo de contacto 2" maxlength="79" styleClass="valorEtiquetaFormulario"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto2}" 
+                         onblur="value = value.toUpperCase().trim()"/>
             <p:spacer/>
 
-            <h:outputText value="Teléfono de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto2}" styleClass="valorEtiquetaFormulario" label ="Teléfono contacto 2" maxlength="199"/>
+            <p:outputLabel value="Teléfono de contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtTelefonoContacto2" label ="Teléfono contacto 2" maxlength="199" styleClass="valorEtiquetaFormulario" 
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto2}"
+                         validatorMessage="Formato de telefono incorrecto, Ejemplo: (094)777785">
+                <f:validateRegex pattern="(^[0-9,-;()]+$)?" />
+            </p:inputText>
             <h:panelGrid columns="2" cellpadding="0">
+                <p:message for="txtTelefonoContacto2"/>
                 <p:graphicImage id="imgAyudaTelefonoContacto2" value="/resources/icon/icono-de-ayuda.png" />
                 <p:tooltip for="imgAyudaTelefonoContacto2">
                     <p>Puede adicionar información como el indicativo o extención <br></br>
                         y adicionar más de un número telefonico separado por (;)</p>
                     <p>Formato: (indicativo)telefono,extención-extención;<br></br>
-                       Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
+                        Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
                 </p:tooltip>
             </h:panelGrid>
 
-            <h:outputText value="Correo electrónico de contacto 2: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtCorreoContacto2" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto2}" styleClass="valorEtiquetaFormulario" label ="Correo electrónico de contacto 2" validatorMessage="Correo electrónico de contacto incorrecto" maxlength="79">
+            <p:outputLabel value="Correo electrónico de contacto 2: " styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtCorreoContacto2" label ="Correo electrónico de contacto 2" maxlength="79" styleClass="valorEtiquetaFormulario"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto2}" validatorMessage="Correo electrónico de contacto incorrecto" >
                 <f:validateRegex pattern="(^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$)?" />
             </p:inputText>
             <p:message for="txtCorreoContacto2"/>
 
-            <h:outputText value="Nombre de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto3}" onblur="value = value.toUpperCase()" 
+            <p:outputLabel value="Nombre de contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.nombreContacto3}" onblur="value = value.toUpperCase().trim()" 
                          styleClass="valorEtiquetaFormulario" label ="Nombre de contacto 3" maxlength="99"/>
             <p:spacer/>
 
-            <h:outputText value="Cargo de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto3}" onblur="value = value.toUpperCase()" 
+            <p:outputLabel value="Cargo de contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.cargoContacto3}" onblur="value = value.toUpperCase().trim()" 
                          styleClass="valorEtiquetaFormulario" label ="Cargo de contacto 3" maxlength="79"/>
             <p:spacer/>
 
-            <h:outputText value="Teléfono de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto3}" styleClass="valorEtiquetaFormulario" label ="Teléfono contacto 3" maxlength="199"/>
+            <p:outputLabel value="Teléfono de contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtTelefonoContacto3" label ="Teléfono contacto 3" maxlength="199" styleClass="valorEtiquetaFormulario"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefonoContacto3}"
+                         validatorMessage="Formato de telefono incorrecto, Ejemplo: (094)777785">
+                <f:validateRegex pattern="(^[0-9,-;()]+$)?" />
+            </p:inputText>
             <h:panelGrid columns="2" cellpadding="0">
+                <p:message for="txtTelefonoContacto3"/>
                 <p:graphicImage id="imgAyudaTelefonoContacto3" value="/resources/icon/icono-de-ayuda.png" />
                 <p:tooltip for="imgAyudaTelefonoContacto3">
                     <p>Puede adicionar información como el indicativo o extención <br></br>
                         y adicionar más de un número telefonico separado por (;)</p>
                     <p>Formato: (indicativo)telefono,extención-extención;<br></br>
-                       Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
+                        Ejemplo: (094)777785,2625;(091)7885287,1515-1516;</p>
                 </p:tooltip>
             </h:panelGrid>
 
-            <h:outputText value="Correo electrónico de contacto 3: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtCorreoContacto3" value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto3}" styleClass="valorEtiquetaFormulario" label ="Correo electrónico de contacto 2" validatorMessage="Correo electrónico de contacto incorrecto" maxlength="79">
+            <p:outputLabel value="Correo electrónico de contacto 3: " styleClass="etiquetaFormulario"/>
+            <p:inputText id="txtCorreoContacto3" label ="Correo electrónico de contacto 2" maxlength="79" styleClass="valorEtiquetaFormulario"
+                         value="#{MbFormGrupoEmpresa.identificacionSeleccionada.mailContacto3}" validatorMessage="Correo electrónico de contacto incorrecto" >
                 <f:validateRegex pattern="(^[_A-Za-z0-9-\+]+(\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\.[A-Za-z0-9]+)*(\.[A-Za-z]{2,})$)?" />
             </p:inputText>
             <p:message for="txtCorreoContacto3"/>
 
-            <!--h:outputText value="Saltar siguiente: " />
+            <!--p:outputLabel value="Saltar siguiente: " />
             <h:selectBooleanCheckbox value="#{practica.skip}" /-->
         </h:panelGrid>
     </p:panel>
